# gdls

./: .gitignore  LICENSE  README.md  analyze_folders.py  check_folder_ownership.py  find_large_files.py  gdrive_ls.py  list_drive_files.py  pyproject.toml  requirements.txt
gdls/: __main__.py  auth.py  cache.py  cli.py  core.py  display.py  explorer.py  paths.py
