[project]
name = "gdls"
version = "0.1.0"
description = "Unix-like ls command for Google Drive"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client==2.95.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==1.0.0",
]

[project.scripts]
gdls = "gdls.cli:main"

[tool.uv]
dev-dependencies = []